--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-      "sass": "node-sass --output-style compressed libraries/libraries/static/scss --output libraries/libraries/static/css",
-      "sass-watch": "node-sass --output-style compressed --watch libraries/libraries/static/scss --output libraries/libraries/static/css"
+    "sass": "gulp styles",
+    "watch": "gulp"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,14 @@
   },
   "homepage": "https://github.com/cca/libraries_wagtail#readme",
   "devDependencies": {
-    "node-sass": "^4.5.3"
+    "autoprefixer": "^7.1.2",
+    "config": "^1.26.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^7.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
