use `npm run` instead of global gulp cmd

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
+    "build": "gulp build",
+    "scripts": "gulp scripts",
     "sass": "gulp styles",
     "watch": "gulp"
   },
