--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,11 @@ libraries/media
 *.min.js.map
 libraries/libraries/settings/local_settings.py
 libraries/libraries/settings/local.py
-libraries/libraries/static/wagtailadmin
 libraries/share/
 node_modules/
+# ignore collectstatic location in root of project
 static/
+# track actual static files but not (proprietary) fonts
+!libraries/libraries/static
+libraries/libraries/static/fonts
 python
