--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -6,6 +6,7 @@ django-modelcluster==3.1
 django-taggit==0.22.1
 django-treebeard==4.1.2
 djangorestframework==3.6.3
+elasticsearch==5.4.0
 html5lib==0.999999999
 idna==2.5
 olefile==0.44
