--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -2,20 +2,21 @@ beautifulsoup4==4.6.0
 certifi==2017.7.27.1
 chardet==3.0.4
 Django==1.11.4
+django-managepy-anywhere==1.0
 django-modelcluster==3.1
 django-taggit==0.22.1
 django-treebeard==4.1.2
-djangorestframework==3.6.3
+djangorestframework==3.6.4
 elasticsearch==5.4.0
 html5lib==0.999999999
-idna==2.5
+idna==2.6
 olefile==0.44
 Pillow==4.2.1
 pytz==2017.2
-requests==2.18.3
+requests==2.18.4
 six==1.10.0
 Unidecode==0.4.21
 urllib3==1.22
-wagtail==1.11.1
+wagtail==1.12
 webencodings==0.5.1
 Willow==0.4
