--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "homepage": "https://github.com/cca/libraries_wagtail#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
