--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -1,24 +1,25 @@
 beautifulsoup4==4.6.0
-certifi==2017.7.27.1
+certifi==2018.1.18
 chardet==3.0.4
-Django==1.11.4
+Django==2.0.2
 django-managepy-anywhere==1.0
-django-modelcluster==3.1
-django-taggit==0.22.1
-django-treebeard==4.1.2
-djangorestframework==3.6.4
+django-modelcluster==4.1
+django-taggit==0.22.2
+django-treebeard==4.2.0
+djangorestframework==3.7.7
+draftjs-exporter==2.0.0
 elasticsearch==5.4.0
 html5lib==0.999999999
 idna==2.6
-olefile==0.44
-Pillow==4.2.1
+olefile==0.45.1
+Pillow==4.3.0
 psycopg2==2.7.3.2
-pytz==2017.2
+pytz==2018.3
 requests==2.18.4
-six==1.10.0
+six==1.11.0
 Unidecode==0.4.21
 urllib3==1.22
-wagtail==1.12
+wagtail==2.0
 webencodings==0.5.1
-Willow==0.4
+Willow==1.1
 xmltodict==0.11.0
