--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -14,7 +14,7 @@ idna==2.6
 l18n==2016.6.4
 olefile==0.45.1
 Pillow==4.3.0
-psycopg2==2.7.5
+psycopg2==2.7.5 --no-binary psycopg2
 pytz==2018.3
 requests==2.20
 six==1.11.0
