--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
   },
   "homepage": "https://github.com/cca/libraries_wagtail#readme",
   "devDependencies": {
-    "autoprefixer": "^7.2.5",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "autoprefixer": "^9.5.0",
     "gulp": "^4.0",
-    "gulp-babel": "^7.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.2.2",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.2"
   }
 }
