--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -1,7 +1,8 @@
 beautifulsoup4==4.6.0
 certifi==2018.1.18
 chardet==3.0.4
-Django==2.2.3
+Django==2.2.4
+django-cas-ng==3.6.0
 django-managepy-anywhere==1.0
 django-modelcluster==4.2
 django-taggit==0.23.0
@@ -12,12 +13,15 @@ elasticsearch==5.4.0
 html5lib==0.999999999
 idna==2.6
 l18n==2016.6.4
+lxml==4.4.0
 olefile==0.45.1
 Pillow==4.3.0
-psycopg2==2.7.5 --no-binary psycopg2
+psycopg2-binary==2.8.3
+python-cas==1.4.0
 pytz==2018.3
 requests==2.21.0
 six==1.11.0
+sqlparse==0.3.0
 Unidecode==0.4.21
 urllib3==1.24.2
 wagtail==2.6.1
