--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -7,6 +7,9 @@ linters:
         enabled: true
         width: 4
 
+    NameFormat:
+        enabled: false
+
     SelectorFormat:
         enabled: false
 
