--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -1,31 +1,32 @@
 beautifulsoup4==4.6.0
-certifi==2018.1.18
+certifi==2019.6.16
 chardet==3.0.4
 Django==2.2.4
 django-cas-ng==3.6.0
 django-managepy-anywhere==2.0
 django-modelcluster==4.2
 django-taggit==0.23.0
-django-treebeard==4.2.0
-djangorestframework==3.9.4
-draftjs-exporter==2.1.5
+django-treebeard==4.3
+djangorestframework==3.10.2
+draftjs-exporter==2.1.6
 elasticsearch==5.4.0
-html5lib==0.999999999
-idna==2.6
-l18n==2016.6.4
-lxml==4.4.0
-olefile==0.45.1
-Pillow==4.3.0
+html5lib==1.0.1
+idna==2.8
+l18n==2018.5
+lxml==4.4.1
+olefile==0.46
+Pillow==6.1.0
 psycopg2-binary==2.8.3
 python-cas==1.4.0
-pytz==2018.3
-requests==2.21.0
-six==1.11.0
+pytz==2019.2
+requests==2.22.0
+six==1.12.0
+soupsieve==1.9.3
 sqlparse==0.3.0
-Unidecode==0.4.21
-urllib3==1.24.2
+Unidecode==1.1.1
+urllib3==1.25.3
 wagtail==2.6.1
-Wand==0.4.4
+Wand==0.5.6
 webencodings==0.5.1
 Willow==1.1
-xmltodict==0.11.0
+xmltodict==0.12.0
