--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.6.16
 chardet==3.0.4
 Django==2.2.4
 django-cas-ng==3.6.0
+django-extensions==2.2.1
 django-managepy-anywhere==2.0
 django-modelcluster==4.2
 django-taggit==0.23.0
