--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -1,34 +1,36 @@
+-i https://pypi.org/simple
+asgiref==3.2.3
 beautifulsoup4==4.6.0
-certifi==2019.9.11
+certifi==2019.11.28
 chardet==3.0.4
-Django==2.2.8
-django-cas-ng==3.6.0
-django-extensions==2.2.5
+django-cas-ng==4.1.1
+django-extensions==2.2.8
 django-managepy-anywhere==2.0
-django-modelcluster==5.0
-django-taggit==1.1.0
-django-treebeard==4.3
-djangorestframework==3.10.3
-djangorestframework-simplejwt==4.3.0
+django-modelcluster==5.0.1
+django-taggit==1.2.0
+django-treebeard==4.3.1
+django==3.0.4
+djangorestframework-simplejwt==4.4.0
+djangorestframework==3.11.0
 draftjs-exporter==2.1.7
 elasticsearch==5.4.0
 html5lib==1.0.1
-idna==2.8
+idna==2.9
 l18n==2018.5
-lxml==4.4.1
+lxml==4.5.0
 olefile==0.46
-Pillow==6.2.1
+pillow==6.2.2
 psycopg2-binary==2.8.4
-PyJWT==1.7.1
-python-cas==1.4.0
+pyjwt==1.7.1
+python-cas==1.5.0
 pytz==2019.3
-requests==2.22.0
-six==1.13.0
+requests==2.23.0
+six==1.14.0
 soupsieve==1.9.5
-sqlparse==0.3.0
-Unidecode==1.1.1
-urllib3==1.25.6
-wagtail==2.7
+sqlparse==0.3.1
+unidecode==1.1.1
+urllib3==1.25.8
+wagtail==2.8
 webencodings==0.5.1
-Willow==1.3
+willow==1.3
 xmltodict==0.12.0
