--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+django = "==2.2.11"
 django_managepy_anywhere = "==2.0"
 django-cas-ng = "==4.1.1"
 django-extensions = "==2.2.8"
-djangorestframework-simplejwt = "==4.4.0"
+djangorestframework-simplejwt = "==4.3.0"
 elasticsearch = "==5.4.0"
 l18n = "==2018.5"
 olefile = "==0.46"
@@ -19,4 +20,4 @@ wagtail = "==2.8"
 xmltodict = "==0.12.0"
 
 [requires]
-python_version = "3.7"
+python_version = "3.5"
