--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,17 +1,20 @@
-linters:
+files:
+    include:
+        - libraries/libraries/static/scss/**/*.scss
+        - libraries/libraries/static/scss/**/**/*.scss
+    ignore:
+        - libraries/libraries/static/scss/bootstrap/**/*.scss
+        - libraries/libraries/static/scss/reset/_reset.scss
 
-    ColorKeyword:
-        enabled: false
-
-    Indentation:
-        enabled: true
-        width: 4
-
-    NameFormat:
-        enabled: false
-
-    SelectorFormat:
-        enabled: false
-
-    SpaceBetweenParens:
-        enabled: false
+rules:
+    class-name-format: 0
+    colorKeyword: 0
+    force-pseudo-nesting: 0
+    indentation:
+        - 1
+        -
+          size: 4
+    mixins-before-declarations: 0
+    selector-format: 0
+    space-between-parens: 0
+    variable-name-format: 0
