--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -1,5 +1,5 @@
--i https://pypi.org/simple/
-beautifulsoup4==4.6.0
+-i https://pypi.org/simple
+beautifulsoup4==4.8.2
 certifi==2020.4.5.1
 chardet==3.0.4
 django-cas-ng==4.1.1
@@ -18,18 +18,19 @@ idna==2.9
 l18n==2018.5
 lxml==4.5.0
 olefile==0.46
-pillow==6.2.2
+pillow==7.1.2
 psycopg2-binary==2.8.4
 pyjwt==1.7.1
 python-cas==1.5.0
-pytz==2019.3
+pytz==2020.1
 requests==2.23.0
 six==1.14.0
 soupsieve==1.9.5
 sqlparse==0.3.1
 unidecode==1.1.1
-urllib3==1.25.8
+urllib3==1.25.9
 wagtail==2.9
 webencodings==0.5.1
 willow==1.3
+xlsxwriter==1.2.8
 xmltodict==0.12.0
