npm: update gulp-postcss, add postcss peer dep, update autoprefixer

--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
+    "postcss": "^8.2.1",
     "sass-lint": "^1.13.1"
   },
   "dependencies": {}
