--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -1,16 +1,15 @@
--i https://pypi.org/simple/
 beautifulsoup4==4.8.2
-certifi==2020.12.5
+certifi==2021.5.30
 chardet==4.0.0
+Django==2.2.24
 django-cas-ng==4.1.1
 django-extensions==2.2.8
 django-managepy-anywhere==2.0
 django-modelcluster==5.1
 django-taggit==1.3.0
 django-treebeard==4.3.1
-django==2.2.20
-djangorestframework-simplejwt==4.3.0
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.3.0
 draftjs-exporter==2.1.7
 elasticsearch==5.4.0
 html5lib==1.1
@@ -18,19 +17,19 @@ idna==2.10
 l18n==2018.5
 lxml==4.6.3
 olefile==0.46
-pillow==7.2.0
+Pillow==7.2.0
 psycopg2-binary==2.8.4
-pyjwt==1.7.1
+PyJWT==1.7.1
 python-cas==1.5.0
 pytz==2021.1
 requests==2.25.1
-six==1.15.0
+six==1.16.0
 soupsieve==1.9.5
 sqlparse==0.4.1
-unidecode==1.2.0
-urllib3==1.26.4
+Unidecode==1.2.0
+urllib3==1.26.5
 wagtail==2.9.3
 webencodings==0.5.1
-willow==1.3
-xlsxwriter==1.3.8
+Willow==1.3
+XlsxWriter==1.4.3
 xmltodict==0.12.0
