--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ django-storages = {version = "==1.7.1", extras = ["google"]}
 uwsgi = "==2.0.20"
 dj-database-url = "<0.6"
 whitenoise = {version = "==5.2.0", extras = ["brotli"]}
+pysftp = "==0.2.9"
 
 [requires]
 python_version = "3.6"
