--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -1,6 +1,9 @@
+bcrypt==3.1.7
 beautifulsoup4==4.8.2
 certifi==2021.5.30
+cffi==1.14.6
 chardet==4.0.0
+cryptography==3.2.1
 Django==2.2.24
 dj-database-url<0.6
 django-cas-ng==4.1.1
@@ -19,21 +22,25 @@ idna==2.10
 l18n==2018.5
 lxml==4.6.3
 olefile==0.46
+paramiko==2.7.2
 Pillow==7.2.0
 psycopg2-binary==2.8.4
+pycparser==2.20
 PyJWT==1.7.1
+PyNaCl==1.4.0
+pysftp==0.2.9
 python-cas==1.5.0
 pytz==2021.1
 requests==2.25.1
 six==1.16.0
 soupsieve==1.9.5
-sqlparse==0.4.1
-Unidecode==1.2.0
-urllib3==1.26.5
+sqlparse==0.4.2
+Unidecode==1.3.1
+urllib3==1.26.6
 uwsgi==2.0.20
 wagtail==2.9.3
 webencodings==0.5.1
 Willow==1.3
-XlsxWriter==1.4.3
+XlsxWriter==1.4.5
 xmltodict==0.12.0
 whitenoise[brotli]==5.2.0
