--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^9.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
     "postcss": "^8.2.1",
     "sass-lint": "^1.13.1"
   },
   "engines": {
     "node": "<15"
+  },
+  "dependencies": {
+    "node-sass": "^6.0.1"
   }
 }
