--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,7 +119,7 @@ synchronize_qa:
       when: always
   script:
     - *gcloud_auth_prod
-    - *export_prod_db
+      #- *export_prod_db
     - *gcloud_auth_staging
     - *provision_db_staging
     - *provision_storage_qa
@@ -163,39 +163,39 @@ deploy_fast_qa:
 # ------------------------
 
 # ONLY HERE FOR REFERENCE - THIS SHOULD ONLY BE DONE ONCE
-  stage: deploy
-  rules:
-    - if: "$CI_COMMIT_REF_NAME =~ /^staging-fast-*/"
-      when: always
-  script:
-    - apt-get update
-    - apt -y install gettext
-    - *gcloud_auth_staging
-    - *apply_k8s_staging
-  environment:
-    name: "$CI_COMMIT_REF_NAME"
-    url: https://$CI_ENVIRONMENT_SLUG.stg.cca.edu
+#  stage: deploy
+#  rules:
+#    - if: "$CI_COMMIT_REF_NAME =~ /^staging-fast-*/"
+#      when: always
+#  script:
+#    - apt-get update
+#    - apt -y install gettext
+#    - *gcloud_auth_staging
+#    - *apply_k8s_staging
+#  environment:
+#    name: "$CI_COMMIT_REF_NAME"
+#    url: https://$CI_ENVIRONMENT_SLUG.stg.cca.edu
 
-.provision_storage_prod: &provision_storage_prod
-  - gsutil ls -b gs://libraries-media.cca.edu/ || gsutil mb -p cca-web-0 -c STANDARD -l us-west1 -b on gs://libraries-media.cca.edu/
-  - gsutil iam ch allUsers:objectViewer gs://libraries-media.cca.edu/
-  - export CORS_ORIGIN='libraries'; envsubst < kubernetes/cors.json > /tmp/cors.json; gsutil cors set /tmp/cors.json gs://libraries-media.cca.edu; rm /tmp/cors.json
+#.provision_storage_prod: &provision_storage_prod
+#  - gsutil ls -b gs://libraries-media.cca.edu/ || gsutil mb -p cca-web-0 -c STANDARD -l us-west1 -b on gs://libraries-media.cca.edu/
+#  - gsutil iam ch allUsers:objectViewer gs://libraries-media.cca.edu/
+# - export CORS_ORIGIN='libraries'; envsubst < kubernetes/cors.json > /tmp/cors.json; gsutil cors set /tmp/cors.json gs://libraries-media.cca.edu; rm /tmp/cors.json
 
-.apply_k8s_prod: &apply_k8s_prod
+#.apply_k8s_prod: &apply_k8s_prod
   # - kubectl kubernetes/overlays/production/ | envsubst | kubectl apply -f -
-  - cat kubernetes/manifests/production.yaml | envsubst | kubectl apply -f -
+  #  - cat kubernetes/manifests/production.yaml | envsubst | kubectl apply -f -
 
 # tag example: release-${VERSION}
-deploy_release:
-  image: "google/cloud-sdk:352.0.0"
-  stage: deploy
-  rules:
-    - if: "$CI_COMMIT_REF_NAME =~ /^release-*/"
-      when: manual
-  script:
-    - apt-get update
-    - apt -y install gettext
-    - *gcloud_auth_prod
-    - *apply_k8s_prod
-  environment:
-    name: "$CI_COMMIT_REF_NAME"
+#deploy_release:
+#  image: "google/cloud-sdk:352.0.0"
+#  stage: deploy
+#  rules:
+#    - if: "$CI_COMMIT_REF_NAME =~ /^release-*/"
+#      when: manual
+#  script:
+#    - apt-get update
+#    - apt -y install gettext
+#    - *gcloud_auth_prod
+#    - *apply_k8s_prod
+#  environment:
+#    name: "$CI_COMMIT_REF_NAME"
