--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,6 @@ variables:
   POSTGRES_DB: $CI_ENVIRONMENT_SLUG
   POSTGRES_VERSION: 9.6.2
   KUBERNETES_VERSION: 1.16.15
-  HELM_VERSION: 2.13.1
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: tcp://localhost:2375
   ROLLOUT_RESOURCE_TYPE: deployment
@@ -19,12 +18,12 @@ services:
 
 stages:
   - build
-  - synchronize
+    #  - synchronize
   - deploy
 
 # Build & Push Docker image to Google Container Registry.
 docker_image_staging:
-  image: "docker:18.09.7"
+  image: "docker:20.09"
   stage: build
   rules:
     - if: "$CI_COMMIT_REF_NAME =~ /^(mg|jj|althea|ep)-(fast|nodb|full)-*/"
@@ -89,7 +88,7 @@ docker_image_prod:
 # https://cloud.google.com/sql/docs/postgres/import-export/importing
 .provision_db_staging: &provision_db_staging
   - export DB_FILE=libraries_export_"$(date +'%Y_%m_%d')".gz
-  - gsutil cp gs://cca-manual-ldb-dumps/${DB_FILE} gs://libraries-db-dumps-ci
+  - gsutil cp gs://cca-manual-db-dumps/${DB_FILE} gs://libraries-db-dumps-ci
   - gcloud sql databases delete libraries-${KUBERNETES_NAMESPACE_OVERWRITE} --instance=cca-edu-staging-2 || true
   - gcloud sql databases create libraries-${KUBERNETES_NAMESPACE_OVERWRITE} --instance=cca-edu-staging-2 --charset=UTF8 --collation=en_US.UTF8 || true
   - gcloud sql import sql cca-edu-staging-2 gs://libraries-db-dumps-ci/${DB_FILE} --database=libraries-${KUBERNETES_NAMESPACE_OVERWRITE} -q || true
@@ -112,14 +111,14 @@ docker_image_prod:
 
 # tag example: mg-full-0.0.1.
 synchronize_qa:
-  image: "google/cloud-sdk:352.0.0"
+  image: "google/cloud-sdk:360.0.0"
   stage: synchronize
   rules:
     - if: "$CI_COMMIT_REF_NAME =~ /^(mg|jj|althea|ep)-full-*/"
       when: always
   script:
-    - *gcloud_auth_prod
-      #- *export_prod_db
+    #- *gcloud_auth_prod
+    #- *export_prod_db
     - *gcloud_auth_staging
     - *provision_db_staging
     - *provision_storage_qa
@@ -128,7 +127,7 @@ synchronize_qa:
 
 # tag example: mg-full-0.0.1.
 deploy_full_qa:
-  image: "google/cloud-sdk:352.0.0"
+  image: "google/cloud-sdk:360.0.0"
   stage: deploy
   rules:
     - if: "$CI_COMMIT_REF_NAME =~ /^(mg|jj|althea|ep)-full-*/"
@@ -144,7 +143,7 @@ deploy_full_qa:
 
 # tag example: mg-fast-0.0.1.
 deploy_fast_qa:
-  image: "google/cloud-sdk:352.0.0"
+  image: "google/cloud-sdk:360.0.0"
   stage: deploy
   rules:
     - if: "$CI_COMMIT_REF_NAME =~ /^(mg|jj|althea|nlm)-fast-*/"
