--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 ---
-image: alpine:3.10
+image: alpine:3.13.6
 
 variables:
   # KUBE_INGRESS_BASE_DOMAIN is the application deployment.
@@ -18,7 +18,7 @@ services:
 
 stages:
   - build
-    #  - synchronize
+  - synchronize
   - deploy
 
 # Build & Push Docker image to Google Container Registry.
