--- a/kubernetes/services.yaml
+++ b/kubernetes/services.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: libraries-http
+  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
   labels:
     app: libraries
 spec:
