--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -17,7 +17,7 @@ metadata:
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 data:
   # Generic
-  DJANGO_SETTINGS_MODULE: libraries.settings
+  DJANGO_SETTINGS_MODULE: libraries.libraries.settings
   KUBERNETES_NAMESPACE: ${KUBERNETES_NAMESPACE_OVERWRITE}
 
   # CAS
