--- a/kubernetes/production.yaml
+++ b/kubernetes/production.yaml
@@ -1,12 +1,12 @@
 ---
-# create the namespace for portal
+# create the namespace for libraries
 
 kind: Namespace
 apiVersion: v1
 metadata:
   name: ${KUBERNETES_NAMESPACE_OVERWRITE}
   labels:
-    name: portal
+    name: libraries
 
 ---
 # Settings to expose as environment variables.
@@ -17,7 +17,7 @@ metadata:
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 data:
   # Generic
-  DJANGO_SETTINGS_MODULE: portal.settings
+  DJANGO_SETTINGS_MODULE: libraries.libraries.settings
   KUBERNETES_NAMESPACE: ${KUBERNETES_NAMESPACE_OVERWRITE}
 
   # Sentry
@@ -28,7 +28,7 @@ data:
   CAS_SERVER_URL: "https://sso.cca.edu/cas/login"
 
   # Media
-  MEDIA_URL: "https://portal-media.cca.edu/"
+  MEDIA_URL: "https://libraries-media.cca.edu/"
 
   # Elastic Search
   ES_URL: "http://elasticsearch.elasticsearch5.svc:9200"
@@ -36,7 +36,7 @@ data:
 
   # Google Cloud Storage
   GS_PROJECT_ID: cca-web-0
-  GS_BUCKET_NAME: portal-media.cca.edu
+  GS_BUCKET_NAME: libraries-media.cca.edu
   GS_USE_DOMAIN_NAMED_BUCKET: "true"
 
   # Event integration
@@ -51,10 +51,10 @@ data:
   WORKDAY_TENANT: "customreport2/cca/cca_gold/"
 
   # Database
-  DB_NAME: portal-production
+  DB_NAME: libraries-production
 
   # Blackbaud
-  BLACKBAUD_REDIRECT_URI: https://portal.cca.edu/djadmin/base/blackbaudtoken/response/
+  BLACKBAUD_REDIRECT_URI: https://libraries.cca.edu/djadmin/base/blackbaudtoken/response/
 
 ---
 # The application itself.
@@ -70,20 +70,20 @@ spec:
   # Select the pods which are part of this deployment.
   selector:
     matchLabels:
-      app: portal
+      app: libraries
 
   # The pod template this deployment will create.
   template:
     metadata:
       labels:
-        app: portal
+        app: libraries
     spec:
       imagePullSecrets:
         - name: gcr-json-key
 
       initContainers:
         - name: init-app
-          image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+          image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
           imagePullPolicy: Always
           command:
             [
@@ -123,7 +123,7 @@ spec:
 
       containers:
         - name: app
-          image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+          image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
           imagePullPolicy: Always
           # Env variables form ConfigMap
           envFrom:
@@ -290,17 +290,17 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: portal-http
+  name: libraries-http
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
   labels:
-    app: portal
+    app: libraries
 spec:
   type: NodePort
   ports:
     - port: 8000
       protocol: TCP
   selector:
-    app: portal
+    app: libraries
 
 ---
 # A service that allows pods to connect to the Cloud SQL instance
@@ -328,7 +328,7 @@ metadata:
   namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
 spec:
   backend:
-    serviceName: portal-http
+    serviceName: libraries-http
     servicePort: 8000
 
 ---
@@ -352,7 +352,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: app-import-hourly
-              image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
                 - python
@@ -413,7 +413,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: app-import-daily
-              image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
                 - python
@@ -493,7 +493,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: app-import-weekly
-              image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
                 - python
@@ -549,7 +549,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: app-report-recent-edits
-              image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
                 - python
@@ -610,7 +610,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: app-wagtail-publish-scheduled-pages
-              image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
                 - python
@@ -661,7 +661,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: app-clearsessions
-              image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
                 - python
@@ -712,7 +712,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: app-import-every-5-minutes
-              image: us.gcr.io/cca-web-0/portal:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              image: us.gcr.io/cca-web-0/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
               imagePullPolicy: Always
               args:
                 - python
