--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -78,7 +78,7 @@ spec:
               "sh",
               "-c",
               #              "django-admin.py migrate --noinput && django-admin.py createcachetable",
-              "django-admin.py createdb && django-admin.py migrate --noinput && django-admin.py createcachetable",
+              "manage.py createdb && manage.py migrate --noinput && manage.py createcachetable",
             ]
           # Env variables form ConfigMap
           envFrom:
