--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ services:
 
 stages:
   - build
-  #- synchronize
+  - synchronize
   - deploy
 
 # Build & Push Docker image to Google Container Registry.
