--- a/libraries/requirements.txt
+++ b/libraries/requirements.txt
@@ -7,6 +7,7 @@ django-cas-ng==4.1.1
 django-extensions==2.2.8
 django-managepy-anywhere==2.0
 django-modelcluster==5.1
+django-storages[google]==1.7.1
 django-taggit==1.3.0
 django-treebeard==4.3.1
 djangorestframework==3.12.4
