--- a/kubernetes/qa.yaml
+++ b/kubernetes/qa.yaml
@@ -24,7 +24,7 @@ data:
   CAS_SERVER_URL: "https://sso-stage.cca.edu/cas/login"
 
   # Media
-  MEDIA_URL: "https://storage.googleapis.com/libraries-${KUBERNETES_NAMESPACE_OVERWRITE}/"
+  MEDIA_URL: "https://storage.googleapis.com/libraries-staging-${KUBERNETES_NAMESPACE_OVERWRITE}/"
 
   # Review Apps
   DEPLOY_RELEASE: ${KUBERNETES_NAMESPACE_OVERWRITE}
